# cite-helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: release-v0.1.0.md
src/cite_helper/: __init__.py  chunker.py  cli.py  embedder.py  indexer.py  pdf_parser.py  retriever.py  schemas.py
tests/: test_regression.py
